# customMchpApps

./: .gitignore  README.md  west.yml
HSMSensorPWM/: CMakeLists.txt  prj.conf
HSMSensorPWM/include/: app_button.h  app_pwm_state.h
HSMSensorPWM/src/: app_button.c  app_pwm_state.c  app_sensor_state.c  main.c
HSMSensorPWMSolution/: CMakeLists.txt  build_flash.sh  build_flashlinux.sh
HSMSensorPWMSolution/boards/: same54_xpro.overlay
HSMSensorPWMSolution/include/: app_pwm_state.h  app_sensor_state.h
HSMSensorPWMSolution/src/: app_button.c  app_pwm_state.c  app_sensor_state.c  main.c
multiThreadApp/: CMakeLists.txt  prj.conf
multiThreadApp/boards/: same54_xpro.overlay
multiThreadApp/src/: app_button_thread.c  app_pwm_thread.c  app_sensor_thread.c  main.c
multiThreadAppSolution/: build_flashwindows.bat
multiThreadAppSolution/boards/: same54_xpro.overlay
multiThreadAppSolution/include/: app_button_thread.h  app_pwm_thread.h  app_sensor_thread.h
multiThreadAppSolution/src/: app_button_thread.c  app_pwm_thread.c  app_sensor_thread.c  main.c
pwmMachine/: CMakeLists.txt
pwmMachine/include/: app_pwm_state.h
pwmMachine/src/: app_pwm_state.c  main.c
pwmMachineSolution/: prj.conf
pwmMachineSolution/boards/: same54_xpro.overlay
pwmMachineSolution/include/: app_pwm_state.h
pwmMachineSolution/src/: app_pwm_state.c  main.c
sensorMachineApp/: prj.conf
sensorMachineApp/boards/: same54_xpro.overlay
sensorMachineApp/include/: app_button.h  app_pwm_state.h  app_sensor_state.h
sensorMachineAppSolution/: CMakeLists.txt  prj.conf
(+10 files in other folders)
